# nitro-enc-svc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.enclave  Dockerfile.runner  Dockerfile.vsock-proxy  EnclaveDesign.md  README.md  buildspec-test.yml  buildspec.yml
config/: enclave.env.example  iso-20022.yaml  vsock-proxy.env.example
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  protocol.rs
crates/enclave/: Cargo.toml
crates/enclave/src/: config.rs  main.rs
crates/enclave/src/aws/: clients.rs  mod.rs  vsock_connector.rs
crates/enclave/src/crypto/: cipher.rs  mod.rs
crates/enclave/src/dek/: mod.rs  store.rs
crates/enclave/src/schema/: cache.rs  mod.rs  resolver.rs
crates/enclave/src/server/: handlers.rs  middleware.rs  mod.rs  router.rs  state.rs  tls.rs
crates/enclave/src/telemetry/: init.rs  log_writer.rs  metrics.rs  mod.rs
crates/vsock-proxy/: Cargo.toml
crates/vsock-proxy/src/: config.rs  main.rs  proxy.rs
crates/vsock-proxy/src/telemetry/: mod.rs
deploy/: daemonset-enclave.yaml  e2e-latency-canary.yaml  karpenter-ec2nodeclass.yaml  karpenter-nodepool.yaml  namespace.yaml  nitro-placeholder.yaml  otel-collector.yaml  pod-example.yaml  rbac.yaml  vsock-proxy-service.yaml  vsock-proxy-test.yaml
docs/: action-plan.md  benchmark-2026-03-07.md  benchmark-2026-03-07b.md  deployment.md  enclave-startup-debugging.md  test-report-2026-03-05.md  test-report-2026-03-07.md  test-report-2026-03-07b.md  test-report-2026-03-12.md
schemas/: example-payments-v1.yaml
scripts/: deploy.sh  destroy.sh  enclave-entrypoint.sh  run-enclave.sh
terraform/: .terraform.lock.hcl  DESIGN.md  acm.tf  ecr.tf  eks.tf  iam.tf  kms.tf  outputs.tf  pipeline.tf  storage.tf  terraform.tfvars.example  tfplan-cloudwatch  variables.tf  versions.tf  vpc.tf
terraform/templates/: node_userdata.sh.tpl
tests/: README.md
