[package]
name = "enclave"
version = "0.1.0"
edition = "2021"
description = "Nitro Enclave service: HTTPS server, PII encryption, DEK lifecycle"

[[bin]]
name = "enclave"
path = "src/main.rs"

[dependencies]
# Internal
common = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# TLS
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Vsock
tokio-vsock = { workspace = true }

# Encryption
aes-gcm-siv = { workspace = true }
base64 = { workspace = true }

# Serialisation
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"

# OpenAPI
openapiv3 = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Tracing / logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Configuration
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
arc-swap = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
axum-test = { workspace = true }
tokio = { workspace = true }
